[package]
name = "astrorust"
version = "0.1.0"
edition = "2021"

# Specify the path to your data folder
[package.metadata]
data = "data"

[lib]
bench = false

[dependencies]
num-integer = "0.1"
byteorder = "1.4"
memmap = "0.7"
ndarray = "0.15"
lazy_static = "1.4"
linked-hash-map = "0.5"
flame = "0.2.2"
nalgebra = "0.32.3"
num-traits = "0.2.17"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
